--- a/static/main.css
+++ b/static/main.css
@@ -1,13 +1,3 @@
-label.field-label {
-  display: inline-block;
-  text-align: right;
-  width:140px;
-}
-
-.field {
-  vertical-align: center;
-  display: inline;
-}
-
-.field-wrap {
+.section {
+  text-align: center;
 }
