--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+/*
+Thanks to doclov on Github for the striped/animated styling guide: 
+  https://github.com/docluv/Love2Dev-Code-Samples
+  https://love2dev.com/blog/css-background-stripes/
+*/
+
 .button.button-warning,
 button.button-warning,
 input[type="submit"].button-warning,
@@ -23,3 +29,48 @@ input[type="button"].button-warning:focus {
   color: #FFF;
   background-color: #DB3E1E;
   border-color: #DB3E1E; }
+
+.button.button-deadly,
+button.button-deadly,
+input[type="submit"].button-deadly,
+input[type="reset"].button-deadly,
+input[type="button"].button-deadly {
+  width: 171.5px;
+  color: #FFF;
+  background-color: #000000;
+  border-color: #F05233;
+  background: repeating-linear-gradient(45deg,
+          #F05233,
+          #F05233 10px,
+          #000000 10px,
+          #000000 20px);
+}
+.button.button-deadly:hover,
+button.button-deadly:hover,
+input[type="submit"].button-deadly:hover,
+input[type="reset"].button-deadly:hover,
+input[type="button"].button-deadly:hover,
+.button.button-deadly:focus,
+button.button-deadly:focus,
+input[type="submit"].button-deadly:focus,
+input[type="reset"].button-deadly:focus,
+input[type="button"].button-deadly:focus {
+  color: #FFF;
+  background-color: #000000;
+  border-color: #F05233;
+  background: repeating-linear-gradient(45deg,
+          #F05233,
+          #F05233 10px,
+          #000000 10px,
+          #000000 20px);
+  animation: button-deadly 1s linear infinite
+  }
+
+  @keyframes button-deadly {
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: 28.28px 0;
+    }
