--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
 }
 
 /*
-Thanks to doclov on Github for the striped/animated styling guide: 
+Thanks to doclov on Github for the striped/animated styling guide:
   https://github.com/docluv/Love2Dev-Code-Samples
   https://love2dev.com/blog/css-background-stripes/
 */
@@ -64,13 +64,74 @@ input[type="button"].button-deadly:focus {
           #000000 10px,
           #000000 20px);
   animation: button-deadly 1s linear infinite
+}
+
+@keyframes button-deadly {
+  0% {
+      background-position: 0 0;
   }
 
-  @keyframes button-deadly {
-    0% {
-        background-position: 0 0;
-    }
+  100% {
+      background-position: 28.28px 0;
+  }
+}
 
-    100% {
-        background-position: 28.28px 0;
-    }
+
+/* Thanks to Gavin Michael for the navbar: https://codepen.io/GavinMichael/pen/zZejxX */
+.navBar{
+  background-color: #009cde;
+  overflow: hidden;
+  margin: 20px 0px;
+}
+
+/*Floats each item to the left with padding of 14 & 16 px.
+Removes the underline with text decoration = none.*/
+.navBar .navBarElement{
+  float: left;
+  color: white;
+  padding: 5px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Raleway";
+}
+
+/*Background color change during hover state*/
+.navBar a.navBarElement:hover{
+  background-color: white;
+  color: #009cde;
+}
+
+/*Hides the menu Icon which will show when the nav needs to be responsive*/
+.navBar a.icon{
+  display: none;
+}
+
+/*Set your custom screen width here replacing 700*/
+@media (max-width: 700px){
+/*Ignores the first link (which is Home) in the div and       applies 'display = none' to everything else.   Basically hiding everything but Home*/
+  .navBar .navBarElement:not(.icon):not(:first-child){
+    display: none;
+  }
+/*Brings the menu icon into view and floats it to the right*/
+  .navBar a.icon{
+    display: block;
+    float: right;
+  }
+
+/*The navBar class will be changed to 'navBar responsive' using JS. This chunk of CSS makes the menu icon stay where it is by making the position absolute within it's parent 'right top corner'. Without this, the icon will get kicked around when the items are collapsed and expanded*/
+  .navBar.responsive {
+    position: relative;
+  }
+  .navBar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+/*Removes the originally set float and brings them to view*/
+  .navBar.responsive .navBarElement:not(.icon){
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
