--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+input:invalid{
+  background-color: #F05233;
+}
+
 /*
 Thanks to doclov on Github for the striped/animated styling guide:
   https://github.com/docluv/Love2Dev-Code-Samples
@@ -93,6 +97,10 @@ Removes the underline with text decoration = none.*/
   text-decoration: none;
   font-size: 17px;
   font-family: "Raleway";
+}
+
+.navBar span.navBarElement{
+  color: black;
 }
 
 /*Background color change during hover state*/
